# shop-check

./: .gitignore  README.md
backend/: Cargo.toml
backend/dbs/: 2025_3.db
backend/src/: main.rs
backend/src/handle_paypal/: mod.rs  retrieve.rs  structs.rs  utils.rs
backend/src/handle_purchases/: handlers.rs  mod.rs  purchase.rs
backend/src/image_processing/: process.rs
backend/src/sql/: create.rs  mod.rs  utils.rs
frontend/: app.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
frontend/assets/: budgets.json  index.html  style.css
frontend/modules/: callbacks.py  config.py  layout.py  plotting.py  routing.py  sql.py
