[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.6.0"
chrono = "0.4.40"
tesseract = "0.15.1"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }